--- a/procfile
+++ b/procfile
@@ -1,3 +1,3 @@
-web:    bundle exec unicorn -p 5125 -o 0.0.0.0
+web: bundle exec unicorn -E production -p $PORT -o $HOST
 worker1: bundle exec rake longer
 worker2: bundle exec rake shorter
