--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ HOST=0.0.0.0
 # FRONT_PROXY
 # ALLOW_FROM
 # 1MIN_METRICS=n
-FLOAT_SUPPORT=n
-# MYSQL=n
+FLOAT_SUPPORT=n # y
 DBURL=sqlite://data/gforecast.db
+# DBURL=mysql2://root:@localhost/focuslight
 # RRDCACHED=n
 # MOUNT=/
