Support sqlite3 timeout

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ HOST=0.0.0.0
 # 1MIN_METRICS=n
 FLOAT_SUPPORT=n # y
 DBURL=sqlite://data/gforecast.db
+DBTIMEOUT=60000
 # DBURL=mysql2://root:@localhost/focuslight
 # RRDCACHED=n
 # MOUNT=/
