--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ gemfile:
 bundler_args: --deployment
 cache: bundler
 before_install:
-  - sudo apt-get install rrdtool librrd-dev
+  - sudo apt-get install rrdtool librrd-dev sqlite3 libsqlite3-dev
   - gem update --system
   - gem install bundler
 before_script:
