--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       PORT: 5125
       HOST: 0.0.0.0
       FLOAT_SUPPORT: n
-      DBURL: mysql2://root:@db/focuslight
+      DBURL: mysql2://root:root@db/focuslight
       DBTIMEOUT: 60000
       LOG_PATH: log/application.log
       LOG_LEVEL: warn
